--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
         <p>Join my newsletter for the latest updates on my projects, coding tips, and industry insights delivered straight to your inbox.</p>
         <form class="row g-3">
             <div class="col-lg-6">
-                <label for="inputName" class="form-label">Name</label>
+                <label for="inputName" class="form-label" required>Name</label>
                 <input type="text" class="form-control" id="inputName">
             </div>
             <div class="col-lg-6">
-                <label for="inputEmail" class="form-label">Email</label>
+                <label for="inputEmail" class="form-label" required>Email</label>
                 <input type="email" class="form-control" id="inputEmail">
             </div>
             <div class="col-12 mb-4">
