--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
     </section>
     
     <!-- portfolio section starts here -->
-<section id="portfolio" class="container pb-4">
-    <div class="row">
-        <!-- my-4 used to add top and bottom margin to heading -->
-        <div class="col-12 text-center my-4">
-          <h2 class="display-5">Portfolio</h2>
-        </div>
-<!--cols for cards-->
-        <div class="col-12 col-md-6">
-            <div class="card mb-3">
-                <img src="../portfolio-example/assets/images/wags-and-walks.webp" class="card-img-top" alt="A man walking several dogs early in the morning">
-                <div class="card-body">
-                    <h3 class="card-title">Wags & Walks</h3>
-                    <p class="card-text">A platform for a dog walking service designed to fit the busy lifestyles of pet owners. Focused on promoting a healthy life for dogs, this site showcases convenient scheduling options and services.</p>
-                    <a href="#" class="btn btn-outline-secondary">Visit site</a>
+    <section id="portfolio" class="container pb-4">
+        <div class="row">
+            <!-- my-4 used to add top and bottom margin to heading -->
+            <div class="col-12 text-center my-4">
+                <h2 class="display-5">Portfolio</h2>
+            </div>
+    <!--cols for cards-->
+            <div class="col-12 col-md-6">
+                <div class="card mb-3">
+                    <img src="../portfolio-example/assets/images/wags-and-walks.webp" class="card-img-top" alt="A man walking several dogs early in the morning">
+                    <div class="card-body">
+                        <h3 class="card-title">Wags & Walks</h3>
+                        <p class="card-text">A platform for a dog walking service designed to fit the busy lifestyles of pet owners. Focused on promoting a healthy life for dogs, this site showcases convenient scheduling options and services.</p>
+                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
         <div class="col-12 col-md-6">
             <div class="card mb-3">
@@ -143,18 +143,18 @@
             </div>
         </div>
 
-        <div class="col-12 col-md-6">
-            <div class="card mb-3">
-            <img src="../portfolio-example/assets/images/bmi-calculator.webp" class="card-img-top" alt="Weighing scales seen from the first person view of the person standing on the scales">
-                <div class="card-body">
-                    <h3 class="card-title">BMI Calculator</h3>
-                    <p class="card-text">Promoting a healthier lifestyle with an easy-to-use BMI Calculator. Designed to provide quick health assessments, this tool helps users understand and manage their body mass index with just a few clicks.</p>
-                    <a href="#" class="btn btn-outline-secondary">Visit site</a>
+            <div class="col-12 col-md-6">
+                <div class="card mb-3">
+                    <img src="../portfolio-example/assets/images/bmi-calculator.webp" class="card-img-top" alt="Weighing scales seen from the first person view of the person standing on the scales">
+                    <div class="card-body">
+                        <h3 class="card-title">BMI Calculator</h3>
+                        <p class="card-text">Promoting a healthier lifestyle with an easy-to-use BMI Calculator. Designed to provide quick health assessments, this tool helps users understand and manage their body mass index with just a few clicks.</p>
+                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 </main>
 
 <!--footer starts here-->
@@ -163,34 +163,36 @@
         <div class="col-12 text-center my-4">
             <h2 class="display-5">Contact</h2>
             <p class="mt-4">Got questions or ideas? I'd love to hear from you! Whether you're interested in collaboration, have inquiries about my projects, or wish to request a copy of my CV, please don't hesitate to get in touch. I'm always open to discussing new opportunities and how we can work together to create something amazing!</p>
+        </div>
 
-    </div>
-    <div class="col-12 col-md-10 col-lg-8">
-        <!--add your form here-->
-        <form class="row g-3 mb-4">
-            <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Full Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder" required>
-            </div>
+        <div class="col-12 col-md-10 col-lg-8">
+        <!--Form-->
+            <form class="row g-3 mb-4">
+                <div class="mb-3">
+                    <label for="formGroupExampleInput" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" required>
+                </div>
 
-            <div class="mb-3">
-                <label for="formGroupExampleInput" class="form-label">Phone Number</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder" required>
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
-            </div>
-            <div class="col-12">
-                <button type="submit" class="btn btn-primary">Send</button>
-            </div>
-        </form>
+                <div class="mb-3">
+                    <label for="formGroupExampleInput" class="form-label">Phone Number</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput2" required>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email Address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" required>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+            </form>
+        </div>
     </div>
 </footer>
+<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
