--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="card-body">
                         <h3 class="card-title">Wags & Walks</h3>
                         <p class="card-text">A platform for a dog walking service designed to fit the busy lifestyles of pet owners. Focused on promoting a healthy life for dogs, this site showcases convenient scheduling options and services.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        <a href="#" class="btn btn-outline-secondary hover">Visit site</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <div class="card-body">
                         <h3 class="card-title">We Wellness</h3>
                         <p class="card-text">A comprehensive platform offering a wide range of wellness services and high-end products. From yoga classes to nutritional guidance, users can find everything they need to nurture their body, mind, and spirit.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        <a href="#" class="btn btn-outline-secondary hover">Visit site</a>
                     </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                     <div class="card-body">
                         <h3 class="card-title">Math Wiz</h3>
                         <p class="card-text">An interactive website dedicated to helping kids master mathematics through games and challenges. Designed with young learners in mind, this platform turns complex problems into engaging activities.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        <a href="#" class="btn btn-outline-secondary hover">Visit site</a>
                     </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
                     <div class="card-body">
                         <h3 class="card-title">BMI Calculator</h3>
                         <p class="card-text">Promoting a healthier lifestyle with an easy-to-use BMI Calculator. Designed to provide quick health assessments, this tool helps users understand and manage their body mass index with just a few clicks.</p>
-                        <a href="#" class="btn btn-outline-secondary">Visit site</a>
+                        <a href="#" class="btn btn-outline-secondary hover">Visit site</a>
                     </div>
                 </div>
             </div>
@@ -162,27 +162,27 @@
     <div class="row justify-content-center">
         <div class="col-12 text-center my-4">
             <h2 class="display-5">Contact</h2>
-            <p class="mt-4">Got questions or ideas? I'd love to hear from you! Whether you're interested in collaboration, have inquiries about my projects, or wish to request a copy of my CV, please don't hesitate to get in touch. I'm always open to discussing new opportunities and how we can work together to create something amazing!</p>
+            <p class="mt-4 black-font">Got questions or ideas? I'd love to hear from you! Whether you're interested in collaboration, have inquiries about my projects, or wish to request a copy of my CV, please don't hesitate to get in touch. I'm always open to discussing new opportunities and how we can work together to create something amazing!</p>
         </div>
 
         <div class="col-12 col-md-10 col-lg-8">
         <!--Form-->
             <form class="row g-3 mb-4">
                 <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label">Full Name</label>
+                    <label for="formGroupExampleInput" class=" black-font">Full Name</label>
                     <input type="text" class="form-control" id="formGroupExampleInput" required>
                 </div>
 
                 <div class="mb-3">
-                    <label for="formGroupExampleInput" class="form-label">Phone Number</label>
+                    <label for="formGroupExampleInput" class="form-label black-font">Phone Number</label>
                     <input type="text" class="form-control" id="formGroupExampleInput2" required>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email Address</label>
+                    <label for="exampleFormControlInput1" class="form-label black-font">Email Address</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" required>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <label for="exampleFormControlTextarea1" class="form-label black-font">Message</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                 </div>
                 <div class="col-12">
@@ -204,7 +204,7 @@
                 <p>Join my newsletter for the latest updates on my projects, coding tips, and industry insights delivered straight to your inbox.</p>
                 <form class="row g-3">
                     <div class="col-lg-6">
-                        <label for="inputName" class="form-label" required>Name</label>
+                        <label for="inputName" class="form-label black-font" required>Name</label>
                         <input type="text" class="form-control" id="inputName">
                     </div>
                     <div class="col-lg-6">
