--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="index.html">Mei Wong</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler sharp-corners" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -57,7 +57,7 @@
             </p>
             <!-- mb-5 gives extra margin spacing under lead text -->
             <p class="lead mb-5">Let's create something amazing together!</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Subscribe to my Newsletter!
             </button>
         </div>
@@ -111,7 +111,7 @@
             </div>
     <!--cols for cards-->
             <div class="col-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card mb-3 sharp-corners">
                     <img src="../portfolio-example/assets/images/wags-and-walks.webp" class="card-img-top" alt="A man walking several dogs early in the morning">
                     <div class="card-body">
                         <h3 class="card-title">Wags & Walks</h3>
@@ -122,7 +122,7 @@
             </div>
 
         <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
                 <img src="../portfolio-example/assets/images/we-wellness.webp" class="card-img-top" alt="A spa with candles towels and natural material">
                     <div class="card-body">
                         <h3 class="card-title">We Wellness</h3>
@@ -133,7 +133,7 @@
         </div>
 
         <div class="col-12 col-md-6">
-            <div class="card mb-3">
+            <div class="card mb-3 sharp-corners">
                 <img src="../portfolio-example/assets/images/math-wiz.webp" class="card-img-top" alt="A child practicing math at a computer">
                     <div class="card-body">
                         <h3 class="card-title">Math Wiz</h3>
@@ -144,7 +144,7 @@
         </div>
 
             <div class="col-12 col-md-6">
-                <div class="card mb-3">
+                <div class="card mb-3 sharp-corners">
                     <img src="../portfolio-example/assets/images/bmi-calculator.webp" class="card-img-top" alt="Weighing scales seen from the first person view of the person standing on the scales">
                     <div class="card-body">
                         <h3 class="card-title">BMI Calculator</h3>
@@ -167,7 +167,7 @@
 
         <div class="col-12 col-md-10 col-lg-8">
         <!--Form-->
-            <form class="row g-3 mb-4">
+            <form class="row g-3 sharp-corners">
                 <div class="mb-3">
                     <label for="formGroupExampleInput" class=" black-font">Full Name</label>
                     <input type="text" class="form-control" id="formGroupExampleInput" required>
@@ -198,7 +198,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close sharp-corners" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>Join my newsletter for the latest updates on my projects, coding tips, and industry insights delivered straight to your inbox.</p>
@@ -212,7 +212,7 @@
                         <input type="email" class="form-control" id="inputEmail">
                     </div>
                     <div class="col-12 mb-4">
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary sharp-corners">
                         Sign up!
                         </button>
                     </div>
@@ -222,8 +222,8 @@
 
         </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary sharp-corners" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary sharp-corners">Save changes</button>
       </div>
     </div>
 </div>
