--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- section with hero image -->
     <section class="row">
         <!-- text-center class used to centre all text inside column -->
-        <div class="col-12 text-center">
+        <div class="col-12 text-center sharp-corners">
             <h1 class="display-4 my-4">Mei Wong</h1>
             <!-- mb-5 gives extra margin spacing under subheading -->
             <h2 class="display-6 mb-5">Software Developer</h2>
@@ -57,7 +57,7 @@
             </p>
             <!-- mb-5 gives extra margin spacing under lead text -->
             <p class="lead mb-5">Let's create something amazing together!</p>
-            <button type="button" class="btn btn-primary sharp-corners" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Subscribe to my Newsletter!
             </button>
         </div>
@@ -197,7 +197,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Subscribe</h1>
                 <button type="button" class="btn-close sharp-corners" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -222,8 +222,7 @@
 
         </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary sharp-corners" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary sharp-corners">Save changes</button>
+        <button type="button" class="btn btn-secondary sharp-corners" data-bs-dismiss="modal">Sign up!</button>
       </div>
     </div>
 </div>
