add custom button colour and hover

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </p>
             <!-- mb-5 gives extra margin spacing under lead text -->
             <p class="lead mb-5">Let's create something amazing together!</p>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn btn-primary custom-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Subscribe to my Newsletter!
             </button>
         </div>
@@ -186,7 +186,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                 </div>
                 <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Send</button>
+                    <button type="submit" class="btn btn-primary custom-button">Send</button>
                 </div>
             </form>
         </div>
@@ -212,7 +212,7 @@
                         <input type="email" class="form-control" id="inputEmail">
                     </div>
                     <div class="col-12 mb-4">
-                        <button type="submit" class="btn btn-primary sharp-corners">
+                        <button type="submit" class="btn btn-primary sharp-corners custom-button">
                         Sign up!
                         </button>
                     </div>
